# test-rust-basics

./: NOTES.md
01-borrow/src/borrow-chacker/: Cargo.toml
02-structs/app-structs/: Cargo.toml
02-structs/app-structs/src/: main.rs
03-structs-lifetimes/app-structs/src/: main.rs
04-structs-libs/: README.md
04-structs-libs/app-structs/: Cargo.toml
04-structs-libs/app-structs/src/: main.rs
05-options/simplepi/: Cargo.toml
05-options/simplepi/src/: main.rs
06-composite-structs/simpleapi/: Cargo.toml
06-composite-structs/simpleapi/src/: main.rs
07-threads-arc/simpleapi/: Cargo.toml
07-threads-arc/simpleapi/articles/: Cargo.toml
07-threads-arc/simpleapi/src/: main.rs
07-threads-arc/simpleapi/strace/: simple.16981  simple.16982  simple.16983  simple.16984  simple.16985  simple.16986  simple.16987  simple.16988  simple.16989  simple.16990
08-threads-arc-mutex/simpleapi/: Cargo.toml
08-threads-arc-mutex/simpleapi/src/: main.rs
08-threads-arc-mutex/simpleapi/strace/: simple.9282  simple.9283  simple.9284  simple.9285  simple.9286  (+6 more)
09-async-serde/simpleapi/: Cargo.toml
10-async-serde-builder/simpleapi/: Cargo.toml
10-async-serde-builder/simpleapi/articles/: Cargo.toml
10-async-serde-builder/simpleapi/articles/src/: lib.rs
10-async-serde-builder/simpleapi/src/: main.rs
10-async-serde-builder/simpleapi/strace/: simple.15080  simple.15081
XX-axum-simple-notwork/simplepi/: Cargo.toml
XX-axum-simple-notwork/simplepi/articles/: Cargo.toml
XX-axum-simple-notwork/simplepi/articles/src/: lib.rs
XX-simple-hyper/simpleapi/: Cargo.toml
(+27 files in other folders)
