[package]
name = "simpleapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
articles = { path = "articles" }
rand = "0.8.5"
nix = "0.8.0"
tokio = { version = "1", features = ["full"] }
serde = { version= "1.0.138", features = ["derive"] }
serde_json = "1.0"

